--- a/index.html
+++ b/index.html
@@ -4,37 +4,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Amadeja Obšteter Privošnik">
-    <meta name="description" content="Front-end developer in Slovenia">
+    <meta 
+      name="description" 
+      content="Front-end developer in Slovenia" >
     <title>Amadeja's portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <script src=""></script>
+    <script src="portfolio.js"></script>
   </head>
   <body>
     <nav>
-      <ul>
+      <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <main>
-      <div id="home">
+      <div id="home" class="landing">
         <img id="avatar" src="images/avatar.png" alt="a small circular image of a forest">
         <h1>Hi! My name is Amadeja.</h1>
         <p>I love coding visually appealing and user-friendly websites.</p>
         <p>Pleased to meet you!</p>
         <a href="#about"><button>⮟ Get to know me</button></a>
       </div>
-      <div id="about">
+      <div id="about" class="landing">
         <h2>Find out more about me</h2>
         <p>I'm a front-end developer based in Slovenia.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <div id="projects">
+      <div id="projects" class="landing">
         <h2>Take a look at my projects</h2>
         <p>Coming soon!</p>
       </div>
-      <div id="contact">
+      <img class="divider" src="images/divider.png">
+      <div id="contact" class="landing">
         <h2>Like what you see?</h2>
         <p>Contact me!</p>
       </div>
