--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Front-end developer in Slovenia" >
     <title>Amadeja's portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
     <script src="portfolio.js"></script>
   </head>
   <body>
@@ -30,7 +31,7 @@
       <div id="about" class="landing">
         <h2>Find out more about me</h2>
         <p>I'm a front-end developer based in Slovenia.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div id="projects" class="landing">
         <h2>Take a look at my projects</h2>
@@ -39,10 +40,11 @@
       <img class="divider" src="images/divider.png">
       <div id="contact" class="landing">
         <h2>Like what you see?</h2>
-        <p>Contact me!</p>
+        <p>Contact me</p>
       </div>
     </main>
     <footer>
+      <p class="sm-links">All links to social media go here</p>
       <p>Thanks for visiting!<p>
       <p>Copyright © 2023 Amadeja Obšteter Privošnik All Rights Reserved.</p>
       <p>Made with ♥ for coding.</p>
