--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       content="Front-end developer in Slovenia" >
     <title>Amadeja's portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Raleway:wght@200;300;400;700&display=swap" rel="stylesheet">
     <script src="portfolio.js"></script>
   </head>
   <body>
     <nav>
+      <span><img src="images/avatar.png"><p>Amadeja Obšteter Privošnik</p></span>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -26,12 +27,14 @@
         <h1>Hi! My name is Amadeja.</h1>
         <p>I love coding visually appealing and user-friendly websites.</p>
         <p>Pleased to meet you!</p>
-        <a href="#about"><button>⮟ Get to know me</button></a>
+        <a href="#about"><button><img class="icon" src="images/angle-circle-down.svg"> Get to know me</button></a>
       </div>
       <div id="about" class="landing">
         <h2>Find out more about me</h2>
         <p>I'm a front-end developer based in Slovenia.</p>
-        <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="white-text">Lorem ipsum...</p>
+        <p class="attribution">Images provided by <a href="https://unsplash.com/@filipz">Filip Zrnzević</a>, <a href="https://unsplash.com/@maritaextrabold">Marita Kavelashvili</a> and <a href="https://unsplash.com/@mvds">Mads Schmidt Rasmussen</a>.</p>
+        <p class="attribution">UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a>.</p>
       </div>
       <div id="projects" class="landing">
         <h2>Take a look at my projects</h2>
@@ -40,11 +43,11 @@
       <img class="divider" src="images/divider.png">
       <div id="contact" class="landing">
         <h2>Like what you see?</h2>
-        <p>Contact me</p>
+        <p>Contact me!</p>
       </div>
     </main>
     <footer>
-      <p class="sm-links">All links to social media go here</p>
+      <p class="sm-links">Social media</p>
       <p>Thanks for visiting!<p>
       <p>Copyright © 2023 Amadeja Obšteter Privošnik All Rights Reserved.</p>
       <p>Made with ♥ for coding.</p>
