--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           <label for="message">Message: <textarea name="message" readonly>This form is just an example and cannot currently be used to send me a message.
 
 May the PHP gods bless me with their knowledge in the future.</textarea></label><br>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Send">
         </form>
       </div>
     </main>
     <footer>
       <p>~ Thanks for visiting!~</p>
-      <p class="sm-links"><a href=""><img src="images/github-green.png"></a><a href=""><img src="images/linkedin-green.png"></a></p>
+      <p class="sm-links"><a href="https://github.com/amadejaop" target="_blank"><img src="images/github-green.png"></a><a href="https://www.linkedin.com/in/amadejaop/" target="_blank"><img src="images/linkedin-green.png"></a></p>
       <p>Copyright © 2023 Amadeja Obšteter Privošnik</p><p>All Rights Reserved.</p>
       <p>Made with ♥ for coding.</p>
     </footer>
