--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
           <h2>Find out more about me</h2>
           <p class="green-text cursive">I'm a front-end developer based in Slovenia.</p>
-          <br><br><p class="white-text">    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+          <br><br><p class="white-text">Coming soon...</p><br>
           <p class="attribution">Images provided by <a href="https://unsplash.com/@filipz">Filip Zrnzević</a>, <a href="https://unsplash.com/@maritaextrabold">Marita Kavelashvili</a> and <a href="https://unsplash.com/@mvds">Mads Schmidt Rasmussen</a>.</p>
           <p class="attribution">UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a>.</p>
         </div>
