Add about me section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
         <div>
           <h2>Find out more about me</h2>
           <p class="green-text cursive">I'm a front-end developer based in Slovenia.</p>
-          <br><br><p class="white-text">Coming soon...</p><br>
-          <p class="attribution">Images provided by <a href="https://unsplash.com/@filipz">Filip Zrnzević</a>, <a href="https://unsplash.com/@maritaextrabold">Marita Kavelashvili</a> and <a href="https://unsplash.com/@mvds">Mads Schmidt Rasmussen</a>.</p>
+          <br><br><p class="white-text">I am currently working on completing the Odin project and am also a part of the Skillup Mentor community, where I am learning to take my programming skills to the next level.</p>
+          <p class="white-text">Technologies and skills: HTML, CSS, JavaScript, TypeScript, React.js, Microsoft Office, Libre Office, Apache OpenOffice, Emmet, Vim, touch typing, Windows OS, Fedora OS, GNOME Terminal/CLI, Microsoft Visual Studio Code, Git, GitHub, communication skills, computer literacy, problem solving, persistence, teamwork</p>
+          <p class="white-text">Languages: Slovenian, English, German</p>
+          <p class="white-text">Hobbies: language learning, reading books, exploring psychology and philosophy</p>
+          
+          <br><p class="attribution">Images provided by <a href="https://unsplash.com/@filipz">Filip Zrnzević</a>, <a href="https://unsplash.com/@maritaextrabold">Marita Kavelashvili</a> and <a href="https://unsplash.com/@mvds">Mads Schmidt Rasmussen</a>.</p>
           <p class="attribution">UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a>.</p>
         </div>
       </div>
