Add a working contact form

--- a/index.html
+++ b/index.html
@@ -76,14 +76,8 @@
       <div id="contact" class="landing">
         <h2>Like what you see?</h2>
         <p class="green-text cursive">Send me a message!</p>
-        <form method="post" action="#">
-          <label for="name">Name: <input name="name" type="text" value="John Doe" readonly></label><br>
-          <label for="email">E-mail: <input name="email" type="email" value="johndoe@email.com" readonly></label><br>
-          <label for="message">Message: <textarea name="message" readonly>This form is just an example and cannot currently be used to send me a message.
-
-May the PHP gods bless me with their knowledge in the future.</textarea></label><br>
-          <input type="submit" value="Send">
-        </form>
+        
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfu--znEMmpcvc5NaCa_q1oCuqTO4QgJGGLdNi_-o3l0ED2kQ/viewform?embedded=true&hl=en" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </main>
     <footer>
