Add images and project descriptions

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         <div id="project-list">
           <div class="card">
             <img class="project-image" src="images/project1bw.png">
-            <h3>to-do list</h3>
+            <h3>To-Do List</h3>
             <p>To-do list for managing your main daily goal and various tasks created with HTML, CSS and JavaScript.</p>
             <span class="project-buttons"><a href="https://amadejaop.github.io/todo-list/todo.html"><button>live preview</button></a><a href="https://github.com/amadejaop/todo-list"><button>code on gitHub</button></a></span>
           </div>
           <div class="card">
-            <img src="images/project-cs.png">
-            <h3>title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <span class="project-buttons"><a href=""><button>live preview</button></a><a href=""><button>code on gitHub</button></a></span>
+            <img class="project-image" src="images/project2bw.png">
+            <h3>Admin Dashboard</h3>
+            <p>Admin dashboard project, front-end only, done with HTML and CSS.</p>
+            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-admin-dashboard/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-admin-dashboard"><button>code on gitHub</button></a></span>
           </div>
           <div class="card">
-            <img src="images/project-cs.png">
-            <h3>title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <span class="project-buttons"><a href=""><button>live preview</button></a><a href=""><button>code on gitHub</button></a></span>
+            <img class="project-image" src="images/project3bw.png">
+            <h3>Tic-Tac-Toe</h3>
+            <p>A tic-tac-toe game for 2 players. The players can play multiple rounds of the game while keeping score of their wins. Upon clicking no when the play again prompt is displayed, the final winner is displayed on the page. Coded with HTML, CSS and JavaScript.</p>
+            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-tictactoe-project/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-tictactoe-project"><button>code on gitHub</button></a></span>
           </div>
           <div class="card">
-            <img src="images/project-cs.png">
-            <h3>title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <span class="project-buttons"><a href=""><button>live preview</button></a><a href=""><button>code on gitHub</button></a></span>
+            <img class="project-image" src="images/project4bw.png">
+            <h3>Sign-Up Form</h3>
+            <p>A sign up form which validates the name, email and telephone fields and checks if the passwords match. Done with HTML, CSS and JavaScript.</p>
+            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-signup-form/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-signup-form"><button>code on gitHub</button></a></span>
           </div>
         </div>
       </div>
