--- a/index.html
+++ b/index.html
@@ -1,90 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Amadeja Obšteter Privošnik">
-    <meta 
-      name="description" 
-      content="Front-end developer in Slovenia" >
-    <title>Amadeja's portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Raleway:wght@200;300;400;500;700&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <nav>
-      <span><img src="images/avatar.png"><p>Amadeja Obšteter Privošnik</p></span>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <div id="home" class="landing">
-        <img id="avatar" src="images/avatar.png" alt="a small circular image of a forest">
-        <h1>Hi! My name is Amadeja.</h1>
-        <p class="green-text">I love coding visually appealing and user-friendly websites.</p>
-        <p class="green-text">Pleased to meet you!</p>
-        <a href="#about"><button><img class="icon" src="images/angle-circle-down.svg"> Get to know me</button></a>
-      </div>
-      <div id="about" class="landing">
-        <div>
-          <h2>Find out more about me</h2>
-          <p class="green-text cursive">I'm a front-end developer based in Slovenia.</p>
-          <br><br><p class="white-text">I am currently working on completing the Odin project and am also a part of the Skillup Mentor community, where I am learning to take my programming skills to the next level.</p>
-          <p class="white-text">Technologies and skills: HTML, CSS, JavaScript, TypeScript, React.js, Microsoft Office, Libre Office, Apache OpenOffice, Emmet, Vim, touch typing, Windows OS, Fedora OS, GNOME Terminal/CLI, Microsoft Visual Studio Code, Git, GitHub, communication skills, computer literacy, problem solving, persistence, teamwork</p>
-          <p class="white-text">Languages: Slovenian, English, German</p>
-          <p class="white-text">Hobbies: language learning, reading books, exploring psychology and philosophy</p>
-          
-          <br><p class="attribution">Images provided by <a href="https://unsplash.com/@filipz">Filip Zrnzević</a>, <a href="https://unsplash.com/@maritaextrabold">Marita Kavelashvili</a> and <a href="https://unsplash.com/@mvds">Mads Schmidt Rasmussen</a>.</p>
-          <p class="attribution">UIcons by <a href="https://www.flaticon.com/uicons">Flaticon</a>.</p>
-        </div>
-      </div>
-      <div id="projects" class="landing">
-        <h2>Take a look at my projects</h2>
-        <div id="project-list">
-          <div class="card">
-            <img class="project-image" src="images/project1bw.png">
-            <h3>To-Do List</h3>
-            <p>To-do list for managing your main daily goal and various tasks created with HTML, CSS and JavaScript.</p>
-            <span class="project-buttons"><a href="https://amadejaop.github.io/todo-list/todo.html"><button>live preview</button></a><a href="https://github.com/amadejaop/todo-list"><button>code on gitHub</button></a></span>
-          </div>
-          <div class="card">
-            <img class="project-image" src="images/project2bw.png">
-            <h3>Admin Dashboard</h3>
-            <p>Admin dashboard project, front-end only, done with HTML and CSS.</p>
-            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-admin-dashboard/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-admin-dashboard"><button>code on gitHub</button></a></span>
-          </div>
-          <div class="card">
-            <img class="project-image" src="images/project3bw.png">
-            <h3>Tic-Tac-Toe</h3>
-            <p>A tic-tac-toe game for 2 players. The players can play multiple rounds of the game while keeping score of their wins. Upon clicking no when the play again prompt is displayed, the final winner is displayed on the page. Coded with HTML, CSS and JavaScript.</p>
-            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-tictactoe-project/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-tictactoe-project"><button>code on gitHub</button></a></span>
-          </div>
-          <div class="card">
-            <img class="project-image" src="images/project4bw.png">
-            <h3>Sign-Up Form</h3>
-            <p>A sign up form which validates the name, email and telephone fields and checks if the passwords match. Done with HTML, CSS and JavaScript.</p>
-            <span class="project-buttons"><a href="https://amadejaop.github.io/TOP-signup-form/index.html"><button>live preview</button></a><a href="https://github.com/amadejaop/TOP-signup-form"><button>code on gitHub</button></a></span>
-          </div>
-        </div>
-      </div>
-      <img class="divider" src="images/divider.png">
-      <div id="contact" class="landing">
-        <h2>Like what you see?</h2>
-        <p class="green-text cursive">Send me a message!</p>
-        
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfu--znEMmpcvc5NaCa_q1oCuqTO4QgJGGLdNi_-o3l0ED2kQ/viewform?embedded=true&hl=en" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-    </main>
-    <footer>
-      <p>~ Thanks for visiting! ~</p>
-      <p class="sm-links"><a href="https://github.com/amadejaop" target="_blank"><img src="images/github-green.png"></a><a href="https://www.linkedin.com/in/amadejaop/" target="_blank"><img src="images/linkedin-green.png"></a></p>
-      <p>Copyright © 2023 Amadeja Obšteter Privošnik</p><p>All Rights Reserved.</p>
-      <p>Made with ♥ for coding.</p>
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
